# cserver

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/application/services/: motor_control_service.hpp
src/domain/ports/: ethercat_port.hpp
src/infrastructure/ethercat/: ethercat_master_dummy.hpp  soem_master.cpp  soem_master.hpp
src/interfaces/http/: http_server_dummy.hpp  http_server_dummy_win.cpp
www/: index.html  style.css
